# esp32_wifi_pad

./: .gitignore  API_DOCUMENTATION.md  CMakeLists.txt  README.md  platformio.ini
include/: InputManager.h  WebServer.h  config.h  credentials.h.template
src/: InputManager.cpp  WebServer.cpp  main.cpp
test/: README.md  test_input_manager.cpp  test_input_manager.h  test_main.cpp  test_program.cpp  test_web_server.cpp  test_web_server.h
test/mocks/: AsyncWebSocket.h
